[gd_scene load_steps=2 format=3 uid="uid://c8qvt5qjkuv7ql"]

[ext_resource type="Script"  path="res://scenes/test/environment_test.gd" id="1_yvmqe"]

[node name="EnvironmentTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvmqe")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "环境特效测试"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EffectList" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 80.0
offset_right = 320.0
offset_bottom = 580.0

[node name="VBoxContainer" type="VBoxContainer" parent="EffectList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EffectListTitle" type="Label" parent="EffectList/VBoxContainer"]
layout_mode = 2
text = "环境特效列表"
horizontal_alignment = 1

[node name="EffectSettings" type="Panel" parent="."]
layout_mode = 0
offset_left = 340.0
offset_top = 80.0
offset_right = 640.0
offset_bottom = 580.0

[node name="VBoxContainer" type="VBoxContainer" parent="EffectSettings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="SettingsTitle" type="Label" parent="EffectSettings/VBoxContainer"]
layout_mode = 2
text = "特效设置"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="EffectSettings/VBoxContainer"]
layout_mode = 2

[node name="IntensityContainer" type="HBoxContainer" parent="EffectSettings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="EffectSettings/VBoxContainer/IntensityContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "强度:"

[node name="IntensitySlider" type="HSlider" parent="EffectSettings/VBoxContainer/IntensityContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.1
max_value = 2.0
step = 0.1
value = 1.0

[node name="IntensityValue" type="Label" parent="EffectSettings/VBoxContainer/IntensityContainer"]
layout_mode = 2
text = "1.0"

[node name="DurationContainer" type="HBoxContainer" parent="EffectSettings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="EffectSettings/VBoxContainer/DurationContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "持续时间:"

[node name="DurationSpinBox" type="SpinBox" parent="EffectSettings/VBoxContainer/DurationContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 60.0
value = 10.0
suffix = "秒"

[node name="WindDirectionContainer" type="HBoxContainer" parent="EffectSettings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="EffectSettings/VBoxContainer/WindDirectionContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "风向:"

[node name="WindDirectionSlider" type="HSlider" parent="EffectSettings/VBoxContainer/WindDirectionContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -1.0
max_value = 1.0
step = 0.1
value = 0.2

[node name="WindDirectionValue" type="Label" parent="EffectSettings/VBoxContainer/WindDirectionContainer"]
layout_mode = 2
text = "0.2"

[node name="WindStrengthContainer" type="HBoxContainer" parent="EffectSettings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="EffectSettings/VBoxContainer/WindStrengthContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "风力:"

[node name="WindStrengthSlider" type="HSlider" parent="EffectSettings/VBoxContainer/WindStrengthContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 2.0
step = 0.1
value = 0.5

[node name="WindStrengthValue" type="Label" parent="EffectSettings/VBoxContainer/WindStrengthContainer"]
layout_mode = 2
text = "0.5"

[node name="SoundEnabledContainer" type="HBoxContainer" parent="EffectSettings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="EffectSettings/VBoxContainer/SoundEnabledContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "启用声音:"

[node name="SoundEnabledCheckBox" type="CheckBox" parent="EffectSettings/VBoxContainer/SoundEnabledContainer"]
layout_mode = 2
button_pressed = true

[node name="SoundVolumeContainer" type="HBoxContainer" parent="EffectSettings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="EffectSettings/VBoxContainer/SoundVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "音量:"

[node name="SoundVolumeSlider" type="HSlider" parent="EffectSettings/VBoxContainer/SoundVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.1
value = 0.8

[node name="SoundVolumeValue" type="Label" parent="EffectSettings/VBoxContainer/SoundVolumeContainer"]
layout_mode = 2
text = "0.8"

[node name="AffectGameplayContainer" type="HBoxContainer" parent="EffectSettings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="EffectSettings/VBoxContainer/AffectGameplayContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "影响游戏玩法:"

[node name="AffectGameplayCheckBox" type="CheckBox" parent="EffectSettings/VBoxContainer/AffectGameplayContainer"]
layout_mode = 2
button_pressed = true

[node name="HSeparator2" type="HSeparator" parent="EffectSettings/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="EffectSettings/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StartButton" type="Button" parent="EffectSettings/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "启动特效"

[node name="StopButton" type="Button" parent="EffectSettings/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "停止特效"

[node name="UpdateButton" type="Button" parent="EffectSettings/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "更新特效"

[node name="EffectPreview" type="Panel" parent="."]
layout_mode = 0
offset_left = 660.0
offset_top = 80.0
offset_right = 1260.0
offset_bottom = 580.0

[node name="PreviewTitle" type="Label" parent="EffectPreview"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 36.0
grow_horizontal = 2
text = "特效预览"
horizontal_alignment = 1

[node name="PreviewScene" type="SubViewport" parent="EffectPreview"]
transparent_bg = true
size = Vector2i(600, 500)

[node name="PreviewContainer" type="Control" parent="EffectPreview/PreviewScene"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="EffectPreview/PreviewScene/PreviewContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="EffectContainer" type="Node2D" parent="EffectPreview/PreviewScene/PreviewContainer"]

[node name="PreviewTexture" type="TextureRect" parent="EffectPreview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 40.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="ButtonPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="ButtonPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ClearButton" type="Button" parent="ButtonPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "清除所有特效"

[node name="SaveButton" type="Button" parent="ButtonPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "保存设置"

[node name="LoadButton" type="Button" parent="ButtonPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "加载设置"

[node name="BackButton" type="Button" parent="ButtonPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "返回"

[connection signal="value_changed" from="EffectSettings/VBoxContainer/IntensityContainer/IntensitySlider" to="." method="_on_intensity_slider_value_changed"]
[connection signal="value_changed" from="EffectSettings/VBoxContainer/DurationContainer/DurationSpinBox" to="." method="_on_duration_spin_box_value_changed"]
[connection signal="value_changed" from="EffectSettings/VBoxContainer/WindDirectionContainer/WindDirectionSlider" to="." method="_on_wind_direction_slider_value_changed"]
[connection signal="value_changed" from="EffectSettings/VBoxContainer/WindStrengthContainer/WindStrengthSlider" to="." method="_on_wind_strength_slider_value_changed"]
[connection signal="toggled" from="EffectSettings/VBoxContainer/SoundEnabledContainer/SoundEnabledCheckBox" to="." method="_on_sound_enabled_check_box_toggled"]
[connection signal="value_changed" from="EffectSettings/VBoxContainer/SoundVolumeContainer/SoundVolumeSlider" to="." method="_on_sound_volume_slider_value_changed"]
[connection signal="toggled" from="EffectSettings/VBoxContainer/AffectGameplayContainer/AffectGameplayCheckBox" to="." method="_on_affect_gameplay_check_box_toggled"]
[connection signal="pressed" from="EffectSettings/VBoxContainer/ButtonContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="EffectSettings/VBoxContainer/ButtonContainer/StopButton" to="." method="_on_stop_button_pressed"]
[connection signal="pressed" from="EffectSettings/VBoxContainer/ButtonContainer/UpdateButton" to="." method="_on_update_button_pressed"]
[connection signal="pressed" from="ButtonPanel/HBoxContainer/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="ButtonPanel/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="ButtonPanel/HBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="ButtonPanel/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
